--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ a{
     line-height: 2.5rem;
     opacity: 0.7;
     padding-left: 0.5rem;
+    transition: width 0.3s;
 }
 .nav-option:hover{
     opacity: 1;
@@ -85,6 +86,33 @@ a{
 .icon i:hover{
     opacity: 1;
 }
+
+/* search baar css */
+
+#search-icon {
+    cursor: pointer;
+}
+#search-input { 
+    /* position: absolute;
+    top: 10px; 
+    left: 60px;  */
+    width: 0; 
+    opacity: 0; 
+    transition: width 0.3s, opacity 0.3s; 
+    color: black;
+    font-size: 1rem;
+}
+
+.nav-option:hover #search-input { 
+    width: calc(100% - 40px); 
+    opacity: 1; 
+    display:inline-flex;
+    height: 1.5rem;
+    border-radius: 25px;
+}
+
+
+
 .box{
     background-color: #232323;
     height: 8rem;
